syntax = "proto2";

import "protos/annotations/clean.proto";
import "protos/annotations/clientmock.proto";

package example;

option go_package = "protos/example";

service EggDeliveryService {
  option (annotations.client_mock) = true;

  rpc OrderEgg (OrderEggRequest) returns (OrderEggResponse);
}

message OrderEggRequest {
  optional string name = 1;
  optional string description = 2 [(annotations.do_not_clean) = true];
  optional int32 num_eggs = 3;
  optional bool with_shell = 4;
  optional Recipient recipient = 5;
}

message OrderEggResponse {
  optional int32 minutes_to_egg = 1;
}

message Recipient {
  optional string name = 1;
  optional string address = 2;
}
